--- a/templates/top.html
+++ b/templates/top.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="ja">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -8,13 +8,14 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>天気情報</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
-    <div class = "alert alert-primary" role="alert">
-        A simple primary alert-check it out!
+    {% for weather in object_list %}
+    <div class = 'text-center mt-4 offset-3 col-6'>
+     {{ weather.location }}
     </div>
+     {% endfor %} 
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
